deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deep-thought
spec:
  selector:
    matchLabels:
      app: deep-thought
  template:
    metadata:
      labels:
        app: deep-thought
    spec:
      containers:
        - name: deep-thought
          image: image-registry.openshift-image-registry.svc:5000/deep-thought-example/deep-thought:latest
          volumeMounts:
            - name: deepthought-json
              mountPath: /etc/42
              readOnly: true
      volumes:
        - name: deepthought-json
          secret:
            secretName: google-application-credentials
