deployment/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: deep-thought
spec:
  ports:
    - name: 8000-tcp
      protocol: TCP
      port: 8000
      targetPort: 8000
  # selector:
  #   app: deep-thought
  #   deployment: deep-thought
